@startuml
hide circle
skinparam classAttributeIconSize 0

class Storage {
    + loadFileContents(memberManager:MemberManager):List<Book>
    + writeToFile(bookList:List<Book>)
}

class ShelvesManager {
}

class MemberManager {
}

class Book {
}

Storage "1" --> "1" ShelvesManager
Storage "1"--> "1" MemberManager
Storage "1"--> "*" Book
@enduml